<resources>
    <string name="app_name">ParkHere</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_drivers_id">Driver\'s License</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered? Login </string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up </string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="err_msg_confirm_password">Passwords are not equal.</string>
    <string name="err_msg_drivers_id">Invalid Driver\'s License</string>
    <string name="err_msg_phone_number">Invalid phone number.</string>
    <string name="btn_link_to_signup">Don\'t have an account? Signup </string>
    <string name="btn_create_listing"> Create Listing </string>
    <string name="btn_delete_listing"> Delete Listing </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="create_listing_choose_spot_heading">Choose Parking Spot</string>
    <string name="enter_spot_description">Enter Description</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="choose_end_time">Choose End Time</string>
    <string name="enter_price">Enter Price</string>
    <string name="btn_next_step">Next Step</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_browse">Rent Listing</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="enter_make">Enter Vehicle Make</string>
    <string name="enter_model">Enter Vehicle Model</string>
    <string name="enter_color">Enter Vehicle Color</string>
    <string name="enter_license_plate_number">Enter License Plate</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="btn_my_listing">My Listings</string>
    <string name="user_listings_heading">Listings I\'ve Created</string>
    <string name="btn_my_reservations">My Reservations</string>
    <string name="user_reservations_heading">Listings I\'ve Reserved</string>
    <string name="browse_multiple_listings_heading">All listings for this parking spot</string>
    <string name="write_review_heading">Write a Review</string>
    <string name="enter_review">Enter Review</string>
    <string name="btn_submit">Submit</string>
    <string name="write_review_confirmed">Review has been submitted!</string>
    <string name="btn_edit_name">Edit Name</string>
    <string name="btn_manage_spots">Manage Spots</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_user_name">Username</string>
    <string name="btn_save_changes">Save</string>
    <string name="manage_spots_heading">My Parking Spots</string>
    <string name="btn_add_spot">Add Parking Spot</string>
    <string name="enter_address">Enter Address</string>
    <string-array name="spot_types">
        <item>Single Spot</item>
        <item>Parking Lot</item>
        <item>Parking Garage</item>
    </string-array>
    <string name="enter_email">Email</string>
    <string name="enter_current_password">Current Password</string>
    <string name="enter_new_password">New Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="enter_cards">Cards</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>