<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parkhere.android.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <TextView
            android:id="@+id/text_current_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_current_password" />
        <EditText
            android:id="@+id/edit_current_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="35"
            android:maxLines="1"
            android:scrollHorizontally="true"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_input_layout_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edit_input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="35"
            android:maxLines="1"
            android:scrollHorizontally="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edit_input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="35"
            android:maxLines="1"
            android:scrollHorizontally="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/save_changes"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_save_changes"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>